# reckoner

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  README.md  SCRATCH  imgui.ini
doc/: DESIGN.md  LOCAL_CACHE.md  REFACTORING_PLAN.md  api-usage.md
src/: AppModel.h  Backend.h  BackendFactory.cpp  BackendFactory.h  Camera.cpp  Camera.h  EntityPicker.cpp  EntityPicker.h  FakeBackend.h  FetchOrchestrator.cpp  FetchOrchestrator.h  HttpBackend.cpp  HttpBackend.h  Interaction.cpp  Interaction.h  Layer.h  Renderer.cpp  Renderer.h  TimelineCamera.cpp  TimelineCamera.h  TimelineRenderer.cpp  TimelineRenderer.h  imgui.ini  main.cpp
src/app/: App.cpp  App.h  Screen.h
src/core/: Color.h  Core.h  Entity.h  EnvLoader.cpp  EnvLoader.h  FpsTracker.h  Mat3.h  PickingLogic.cpp  PickingLogic.h  RingBuffer.h  SolarCalculations.cpp  SolarCalculations.h  Theme.h  TimeExtent.h  TimeUtils.cpp  TimeUtils.h  Vec2.h
src/gui/: ControlsPanel.cpp  ControlsPanel.h
src/http/: BackendAPI.cpp  BackendAPI.h  HttpClient.cpp  HttpClient.h
src/plugin/: PluginMain.cpp
src/render/: LineRenderer.h
src/renderer/: CalendarRenderer.cpp  CalendarRenderer.h  HistogramRenderer.cpp  HistogramRenderer.h  LineRenderer.cpp  LineRenderer.h  MoonAltitudeRenderer.cpp  MoonAltitudeRenderer.h  PointRenderer.cpp  PointRenderer.h  Shader.cpp  Shader.h  SolarAltitudeRenderer.cpp  SolarAltitudeRenderer.h  TextRenderer.cpp  TextRenderer.h
src/screens/: MainScreen.cpp  MainScreen.gui.cpp  MainScreen.gui.cpp.bak  MainScreen.h  imgui.ini
src/shaders/: calendar.frag  calendar_timeline.vert  histogram.frag  histogram.vert  point.frag  point.vert  point_map.vert  point_timeline.vert  raster_tile.frag  raster_tile.vert
src/tiles/: MvtDecoder.cpp  MvtDecoder.h  RasterTileCache.cpp  RasterTileCache.h  RasterTileRenderer.cpp  RasterTileRenderer.h  TileCache.cpp  TileCache.h  TileMath.h  TileRenderer.cpp  TileRenderer.h
tests/: CMakeLists.txt  test_backend_factory.cpp  test_camera.cpp  test_entity.cpp  test_entity_picker.cpp  test_fake_backend.cpp  test_fetch_orchestrator.cpp  test_fps_tracker.cpp  test_mat3.cpp  test_picking_logic.cpp  test_ring_buffer.cpp  test_solar.cpp  test_tile_math.cpp  test_time_utils.cpp  test_timeline_camera.cpp  test_vec2.cpp
